--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js Starter Project</title>
-    <style>
-        body { margin: 0; }
-        canvas { display: block; }
-    </style>
-</head>
-<body>
-    <script type="module" src="/src/main.js"></script>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>My first three.js app</title>
+		<style>
+			body { margin: 0; }
+		</style>
+	</head>
+	<body>
+        <label for="cube-animation-speed">cube-animation-speed</label>
+        <input type="range" id="cube-animation-speed" min="0.1" max="2" value="1" step="0.1" /><br>
+        <label for="sphere-animation-speed">sphere-animation-speed</label>
+        <input type="range" id="sphere-animation-speed" min="0.1" max="2" value="1" step="0.1" /><br>
+		<label for="cube-texture">cube-texture</label>
+        <input type="range" id="cube-texture" min="0.1" max="2" value="1" step="0.1" /><br>
+		<script type="module" src="/src/main.js"></script>
+	</body>
 </html>
