controllable shader on sphere

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>My first three.js app</title>
+		<title>Blender to Three js</title>
 		<style>
 			body { margin: 0; }
 		</style>
@@ -14,6 +14,8 @@
         <input type="range" id="sphere-animation-speed" min="0.1" max="2" value="1" step="0.1" /><br>
 		<label for="cube-texture">cube-texture</label>
         <input type="range" id="cube-texture" min="0.1" max="2" value="1" step="0.1" /><br>
+        <label for="sphere-shader">sphere-shader</label>
+        <input type="range" id="sphere-shader" min="0" max="1" step="0.01" value="0.5" /><br>
 		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
