--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
 		</style>
 	</head>
 	<body>
-        <label for="cube-animation-speed">cube-animation-speed</label>
+        <label for="cube-animation-speed">cube animation speed</label>
         <input type="range" id="cube-animation-speed" min="0.1" max="2" value="1" step="0.1" /><br>
-        <label for="sphere-animation-speed">sphere-animation-speed</label>
+        <label for="sphere-animation-speed">sphere animation speed</label>
         <input type="range" id="sphere-animation-speed" min="0.1" max="2" value="1" step="0.1" /><br>
-		<label for="cube-texture">cube-texture</label>
+		<label for="cube-texture">cube texture</label>
         <input type="range" id="cube-texture" min="0.1" max="2" value="1" step="0.1" /><br>
-        <label for="sphere-shader">sphere-shader</label>
+        <label for="sphere-shader">sphere shader</label>
         <input type="range" id="sphere-shader" min="0" max="1" step="0.01" value="0.5" /><br>
+        <label for="sphere-shader">sphere shader</label>
+        <input type="range" id="sphere-shader" min="0" max="1" step="0.01" value="0.5" /><br>
+        <label for="cone-colour">cone colour</label>
+        <input type="range" id="cone-colour" min="0" max="1" step="0.01" value="0.5" /><br>
 		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
